--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,43 @@
-.container{
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    gap: 10px;
-}
-#nav ul{
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
+*{
+    background-color: lightgray;
 }
 
-#logo {grid-column: 1/4;}
-#nav{ grid-column: 1; }
+.container {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    align-items: center;
+}
+
+#logo {grid-column: 2 / 3;}
+
+#nav {
+    grid-column: 2 / 8;
+    padding: 5%;
+}
+
+#nav ul {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+#nav a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    text-align: center;
+    color: black;
+    padding: 1rem 0; 
+}
+
+#box1{
+    background-color: red;
+}
+
+#banner{
+    grid-column: 2/8;
+    width: 100%;
+}
