--- a/styles/style.css
+++ b/styles/style.css
@@ -1,43 +1,45 @@
-*{
-    background-color: lightgray;
-}
+*{background-color: lightgray;}
 
-.container {
+.container{
     display: grid;
     grid-template-columns: repeat(8, 1fr);
-    align-items: center;
 }
 
-#logo {grid-column: 2 / 3;}
+#logo{
+    font-family: "Damion", cursive;
+    width: 262px;
+    font-weight: bold;
+    font-style: normal;
 
-#nav {
-    grid-column: 2 / 8;
-    padding: 5%;
+    display: flex;
+    align-items: baseline;
+    grid-column: 2/3;  
 }
 
-#nav ul {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    list-style: none;
-    padding: 0;
-    margin: 0;
+.robot{
+    color: rgb(197, 17, 11);
+    font-size: 32px;
 }
 
-#nav a {
-    display: block;
-    width: 100%;
-    height: 100%;
-    text-decoration: none;
-    text-align: center;
+.juice {
+    font-size: 11px;
     color: black;
-    padding: 1rem 0; 
+    margin-left: 6px;
 }
 
-#box1{
-    background-color: red;
+#headertext{
+    color: rgb(51, 51, 51); 
+    grid-column: 3/4;
 }
 
-#banner{
-    grid-column: 2/8;
-    width: 100%;
+.nav{
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
 }
+
+#box1{grid-column: 2;}
+#box2{grid-column: 3;}
+#box3{grid-column: 4;}
+#box4{grid-column: 5;}
+#box5{grid-column: 6;}
+#box6{grid-column: 7;}
